--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,7 +1,12 @@
 [tryton]
-version=4.3.0
+version=4.7.0
 depends:
+    account
     account_invoice
+    account_product
+    company
+    ir
+    product
 xml:
     contract.xml
     configuration.xml
