Add analytics to the contract lines Fix bugs  #040104

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -7,8 +7,11 @@ depends:
     company
     ir
     product
+extras_depends:
+    analytic_invoice
 xml:
     contract.xml
+    analytic_contract.xml
     configuration.xml
     party.xml
     invoice.xml
