Replace "analytic_invoice" dependency with "analytic_account".
Task #160470

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -9,7 +9,7 @@ depends:
     ir
     product
 extras_depends:
-    analytic_invoice
+    analytic_account
 xml:
     contract.xml
     analytic_contract.xml
