Set analytic_accounts in case is analytic_invoice #160470

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -10,6 +10,7 @@ depends:
     product
 extras_depends:
     analytic_account
+    analytic_invoice
 xml:
     contract.xml
     analytic_contract.xml
