Set unit_price from service in case on_change_product calculate price
from the product or from party price list

From changeset 3356b59
#162375

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -11,6 +11,7 @@ depends:
 extras_depends:
     analytic_account
     analytic_invoice
+    account_invoice_discount
 xml:
     contract.xml
     analytic_contract.xml
